src/main/java/com/translator/antlr/EropPatientAIParser.java
// Generated from EropPatientAI.g4 by ANTLR 4.4
package com.translator.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class EropPatientAIParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__3=1, T__2=2, T__1=3, T__0=4, ROLEPLAYER=5, BUSINESSOP=6, COMPOBLIG=7, 
		RULE=8, END=9, WHEN=10, THEN=11, MATCHES=12, HAPPENED=13, CTHAPPENED=14, 
		BEFORE=15, AFTER=16, BOTYPE=17, ORIGINATOR=18, RESPONDER=19, OUTCOME=20, 
		TIMESTAMP=21, DAY=22, DATE=23, TIME=24, SECOND=25, MINUTE=26, HOUR=27, 
		MONTH=28, YEAR=29, IN=30, NOTIN=31, SUCCESS=32, TECFAIL=33, BIZFAIL=34, 
		INITFAIL=35, ADDROP=36, REMROP=37, TERMINATE=38, PASS=39, OBLIGS=40, RIGHTS=41, 
		PROHIBS=42, IF=43, ELSE=44, ENDIF=45, OTHERWISE=46, WEEKDAY=47, MONTHID=48, 
		EQUALS=49, NOTEQ=50, AND=51, OR=52, NOT=53, LESS=54, LESSEQ=55, GREATER=56, 
		GREATEREQ=57, ASTERISK=58, SEMICOLON=59, COLON=60, HASH=61, BRA=62, KET=63, 
		COMMA=64, QUOTE=65, DQUOTE=66, SQUAREBRA=67, SQUAREKET=68, DOT=69, DASH=70, 
		UNDERSCORE=71, BACKSLASH=72, IDENTIFIER=73, LOWER=74, UPPER=75, DIGIT=76, 
		WS=77, SPACE=78, COMMENT=79;
	public static final String[] tokenNames = {
		"<INVALID>", "'s'", "'d'", "'h'", "'m'", "'roleplayer'", "'businessoperation'", 
		"'compoblig'", "'rule'", "'end'", "'when'", "'then'", "'matches'", "'happened'", 
		"'counthappened'", "'before'", "'after'", "'botype'", "'originator'", 
		"'responder'", "'outcome'", "'timestamp'", "'day'", "'date'", "'time'", 
		"'second'", "'minute'", "'hour'", "'month'", "'year'", "'in'", "'!in'", 
		"'Success'", "'TecFail'", "'BizFail'", "'InitFail'", "'+='", "'-='", "'terminate'", 
		"'pass'", "'obligs'", "'rights'", "'prohibs'", "'if'", "'else'", "'endif'", 
		"'Otherwise'", "WEEKDAY", "MONTHID", "'=='", "'!='", "'&&'", "'||'", "'!'", 
		"'<'", "'<='", "'>'", "'>='", "'*'", "';'", "':'", "'//'", "'('", "')'", 
		"','", "'''", "'\"'", "'['", "']'", "'.'", "'-'", "'_'", "'\\'", "IDENTIFIER", 
		"LOWER", "UPPER", "DIGIT", "WS", "' '", "COMMENT"
	};
	public static final int
		RULE_contractDocument = 0, RULE_declaration = 1, RULE_roleplayerDeclaration = 2, 
		RULE_businessOpDeclaration = 3, RULE_compobligDeclaration = 4, RULE_identifierList = 5, 
		RULE_ruleSet = 6, RULE_singlerule = 7, RULE_rulename = 8, RULE_lhs = 9, 
		RULE_constraintList = 10, RULE_eventmatch = 11, RULE_eventCondition = 12, 
		RULE_businessOpReference = 13, RULE_constraint = 14, RULE_logicalOperator = 15, 
		RULE_attributeConstraint = 16, RULE_roleplayerConstraint = 17, RULE_outcomeConstraint = 18, 
		RULE_booleanConstraint = 19, RULE_timeConstraint = 20, RULE_timeDirectComparison = 21, 
		RULE_timePartialComparison = 22, RULE_historicalQuery = 23, RULE_rolePlayerRef = 24, 
		RULE_timeConstraintString = 25, RULE_timeConstraintContent = 26, RULE_ropConstraint = 27, 
		RULE_rhs = 28, RULE_statusGuardBlock = 29, RULE_statusGuard = 30, RULE_rhsactionList = 31, 
		RULE_rhsaction = 32, RULE_ifstatement = 33, RULE_conditionExpr = 34, RULE_conditionTerm = 35, 
		RULE_simpleCondition = 36, RULE_logicalExpression = 37, RULE_comparisonExpression = 38, 
		RULE_happened_expression = 39, RULE_historicalParams = 40, RULE_termaction = 41, 
		RULE_passaction = 42, RULE_addaction = 43, RULE_remaction = 44, RULE_actionResponder = 45, 
		RULE_ropEntity = 46, RULE_outcome = 47, RULE_ropset = 48, RULE_timeSpec = 49, 
		RULE_absoluteTime = 50, RULE_relativeTime = 51, RULE_timeUnit = 52;
	public static final String[] ruleNames = {
		"contractDocument", "declaration", "roleplayerDeclaration", "businessOpDeclaration", 
		"compobligDeclaration", "identifierList", "ruleSet", "singlerule", "rulename", 
		"lhs", "constraintList", "eventmatch", "eventCondition", "businessOpReference", 
		"constraint", "logicalOperator", "attributeConstraint", "roleplayerConstraint", 
		"outcomeConstraint", "booleanConstraint", "timeConstraint", "timeDirectComparison", 
		"timePartialComparison", "historicalQuery", "rolePlayerRef", "timeConstraintString", 
		"timeConstraintContent", "ropConstraint", "rhs", "statusGuardBlock", "statusGuard", 
		"rhsactionList", "rhsaction", "ifstatement", "conditionExpr", "conditionTerm", 
		"simpleCondition", "logicalExpression", "comparisonExpression", "happened_expression", 
		"historicalParams", "termaction", "passaction", "addaction", "remaction", 
		"actionResponder", "ropEntity", "outcome", "ropset", "timeSpec", "absoluteTime", 
		"relativeTime", "timeUnit"
	};

	@Override
	public String getGrammarFileName() { return "EropPatientAI.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EropPatientAIParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ContractDocumentContext extends ParserRuleContext {
		public RuleSetContext ruleSet() {
			return getRuleContext(RuleSetContext.class,0);
		}
		public TerminalNode WS(int i) {
			return getToken(EropPatientAIParser.WS, i);
		}
		public List<TerminalNode> WS() { return getTokens(EropPatientAIParser.WS); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public ContractDocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contractDocument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EropPatientAIListener ) ((EropPatientAIListener)listener).enterContractDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EropPatientAIListener ) ((EropPatientAIListener)listener).exitContractDocument(this);
		}
	}

	public final ContractDocumentContext contractDocument() throws RecognitionException {
		ContractDocumentContext _localctx = new ContractDocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_contractDocument);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(106); declaration();
				}
				}
				setState(109); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ROLEPLAYER) | (1L << BUSINESSOP) | (1L << COMPOBLIG))) != 0) );
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(111); match(WS);
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117); ruleSet();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	 
		public DeclarationContext() { }
		public void copyFrom(DeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CompositeObligationContext extends DeclarationContext {
		public CompobligDeclarationContext compobligDeclaration() {
			return getRuleContext(CompobligDeclarationContext.class,0);
		}
		public CompositeObligationContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EropPatientAIListener ) ((EropPatientAIListener)listener).enterCompositeObligation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EropPatientAIListener ) ((EropPatientAIListener)listener).exitCompositeObligation(this);
		}
	}
	public static class GovernanceOperationContext extends DeclarationContext {
		public BusinessOpDeclarationContext businessOpDeclaration() {
			return getRuleContext(BusinessOpDeclarationContext.class,0);
		}
		public GovernanceOperationContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EropPatientAIListener ) ((EropPatientAIListener)listener).enterGovernanceOperation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EropPatientAIListener ) ((EropPatientAIListener)listener).exitGovernanceOperation(this);
		}
	}
	public static class RolePlayerContext extends DeclarationContext {
		public RoleplayerDeclarationContext roleplayerDeclaration() {
			return getRuleContext(RoleplayerDeclarationContext.class,0);
		}
		public RolePlayerContext(DeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EropPatientAIListener ) ((EropPatientAIListener)listener).enterRolePlayer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EropPatientAIListener ) ((EropPatientAIListener)listener).exitRolePlayer(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			setState(122);
			switch (_input.LA(1)) {
			case ROLEPLAYER:
				_localctx = new RolePlayerContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(119); roleplayerDeclaration();
				}
				break;
			case BUSINESSOP:
				_localctx = new GovernanceOperationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(120); businessOpDeclaration();
				}
				break;
			case COMPOBLIG:
				_localctx = new CompositeObligationContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(121); compobligDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RoleplayerDeclarationContext extends ParserRuleContext {
		public TerminalNode ROLEPLAYER() { return getToken(EropPatientAIParser.ROLEPLAYER, 0); }
		public TerminalNode SEMICOLON() { return getToken(EropPatientAIParser.SEMICOLON, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public RoleplayerDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_roleplayerDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EropPatientAIListener ) ((EropPatientAIListener)listener).enterRoleplayerDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EropPatientAIListener ) ((EropPatientAIListener)listener).exitRoleplayerDeclaration(this);
		}
	}

	public final RoleplayerDeclarationContext roleplayerDeclaration() throws RecognitionException {
		RoleplayerDeclarationContext _localctx = new RoleplayerDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_roleplayerDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124); match(ROLEPLAYER);
			setState(125); identifierList();
			setState(126); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BusinessOpDeclarationContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(EropPatientAIParser.SEMICOLON, 0); }
		public BusinessOpReferenceContext businessOpReference() {
			return getRuleContext(BusinessOpReferenceContext.class,0);
		}
		public TerminalNode BUSINESSOP() { return getToken(EropPatientAIParser.BUSINESSOP, 0); }
		public BusinessOpDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_businessOpDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EropPatientAIListener ) ((EropPatientAIListener)listener).enterBusinessOpDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EropPatientAIListener ) ((EropPatientAIListener)listener).exitBusinessOpDeclaration(this);
		}
	}

	public final BusinessOpDeclarationContext businessOpDeclaration() throws RecognitionException {
		BusinessOpDeclarationContext _localctx = new BusinessOpDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_businessOpDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128); match(BUSINESSOP);
			setState(129); businessOpReference();
			setState(130); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompobligDeclarationContext extends ParserRuleContext {
		public TerminalNode KET() { return getToken(EropPatientAIParser.KET, 0); }
		public TerminalNode SEMICOLON() { return getToken(EropPatientAIParser.SEMICOLON, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode COMPOBLIG() { return getToken(EropPatientAIParser.COMPOBLIG, 0); }
		public TerminalNode IDENTIFIER() { return getToken(EropPatientAIParser.IDENTIFIER, 0); }
		public TerminalNode BRA() { return getToken(EropPatientAIParser.BRA, 0); }
		public CompobligDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compobligDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EropPatientAIListener ) ((EropPatientAIListener)listener).enterCompobligDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EropPatientAIListener ) ((EropPatientAIListener)listener).exitCompobligDeclaration(this);
		}
	}

	public final CompobligDeclarationContext compobligDeclaration() throws RecognitionException {
		CompobligDeclarationContext _localctx = new CompobligDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_compobligDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132); match(COMPOBLIG);
			setState(133); match(IDENTIFIER);
			setState(134); match(BRA);
			setState(135); identifierList();
			setState(136); match(KET);
			setState(137); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierListContext extends ParserRuleContext {
		public List<TerminalNode> COMMA() { return getTokens(EropPatientAIParser.COMMA); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(EropPatientAIParser.IDENTIFIER, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(EropPatientAIParser.IDENTIFIER); }
		public TerminalNode COMMA(int i) {
			return getToken(EropPatientAIParser.COMMA, i);
		}
		public IdentifierListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifierList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EropPatientAIListener ) ((EropPatientAIListener)listener).enterIdentifierList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EropPatientAIListener ) ((EropPatientAIListener)listener).exitIdentifierList(this);
		}
	}

	public final IdentifierListContext identifierList() throws RecognitionException {
		IdentifierListContext _localctx = new IdentifierListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_identifierList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139); match(IDENTIFIER);
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(140); match(COMMA);
				setState(141); match(IDENTIFIER);
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleSetContext extends ParserRuleContext {
		public SingleruleContext singlerule(int i) {
			return getRuleContext(SingleruleContext.class,i);
		}
		public List<SingleruleContext> singlerule() {
			return getRuleContexts(SingleruleContext.class);
		}
		public RuleSetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleSet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EropPatientAIListener ) ((EropPatientAIListener)listener).enterRuleSet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EropPatientAIListener ) ((EropPatientAIListener)listener).exitRuleSet(this);
		}
	}

	public final RuleSetContext ruleSet() throws RecognitionException {
		RuleSetContext _localctx = new RuleSetContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ruleSet);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(147); singlerule();
				}
				}
				setState(150); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==RULE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingleruleContext extends ParserRuleContext {
		public TerminalNode RULE() { return getToken(EropPatientAIParser.RULE, 0); }
		public RulenameContext rulename() {
			return getRuleContext(RulenameContext.class,0);
		}
		public TerminalNode THEN() { return getToken(EropPatientAIParser.THEN, 0); }
		public TerminalNode WHEN() { return getToken(EropPatientAIParser.WHEN, 0); }
		public RhsContext rhs() {
			return getRuleContext(RhsContext.class,0);
		}
		public TerminalNode END() { return getToken(EropPatientAIParser.END, 0); }
		public LhsContext lhs() {
			return getRuleContext(LhsContext.class,0);
		}
		public SingleruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singlerule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof EropPatientAIListener ) ((EropPatientAIListener)listener).enterSinglerule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof EropPatientAIListener ) ((EropPatientAIListener)listener).exitSinglerule(this);
		}
	}

	public final SingleruleContext singlerule() throws RecognitionException {
		SingleruleContext _localctx = new SingleruleContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_singlerule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152); match(RULE);
			setState(153); rulename();
			setState(154); match(WHEN);
			setState(155); lhs();
			setState(156); match(THEN);
			setState(157); rhs();
			setState(158); match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
